--- a/pc/index.html
+++ b/pc/index.html
@@ -5,26 +5,26 @@
      <!--<base href="https:/dot.asahi.com/" />-->
     <meta name="viewport" content="width=1280, user-scalable=yes">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>〈PR〉●【タイトル】｜AERA dot. (アエラドット)</title>
+    <title>〈PR〉新しい価値観を生み出す「アエラボ」スタート幸せをつくる私の選択キャリアウェルビーイングを考える｜AERA DIGITAL（アエラデジタル）</title>
     <meta name="author" content="Asahi Shimbun Publications Inc."/>
     <meta name="copyright"   content="Copyright Asahi Shimbun Publications Inc. All rights reserved. No reproduction or republication without written permission." />
-    <meta name="description" content="●【ページの説明】"/>
-    <meta name="keywords" content="●【キーワード】" />
+    <meta name="description" content="現役世代の女性を対象に、新しい価値観を生み出す実験場として、AERA×ラボラトリー「アエラボ」が新たにスタートした。２月19日夜、東京・大手町三井ホールで開催された第1回の「アエラボ」イベントをレポートする。"/>
+    <meta name="keywords" content="アエラボ2025" />
     <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="AERA dot. (アエラドット)" />
-    <meta property="og:title" content="〈PR〉●【タイトル】｜AERA dot. (アエラドット)" />
-    <meta property="og:description" content="●【ページの説明】" />
-    <meta property="og:url" content= "https://dot.asahi.com/ad/●【プロジェクトIDyymmddnn】/"/>
+    <meta property="og:site_name" content="AERA DIGITAL（アエラデジタル）" />
+    <meta property="og:title" content="〈PR〉新しい価値観を生み出す「アエラボ」スタート幸せをつくる私の選択キャリアウェルビーイングを考える｜AERA DIGITAL（アエラデジタル）" />
+    <meta property="og:description" content="現役世代の女性を対象に、新しい価値観を生み出す実験場として、AERA×ラボラトリー「アエラボ」が新たにスタートした。２月19日夜、東京・大手町三井ホールで開催された第1回の「アエラボ」イベントをレポートする。" />
+    <meta property="og:url" content= "https://dot.asahi.com/ad/25033103/"/>
     <meta property="og:locale" content="ja_JP" />
-    <meta property="og:image" content="https://dot.asahi.com/ad/●【プロジェクトIDyymmddnn】/img/●【画像.jpg】"/>
-    <meta property="article:published_time" content="●【公開日20yymmdd】T120000+0900">
+    <meta property="og:image" content="https://dot.asahi.com/ad/25033103/img/ogp.jpg"/>
+    <meta property="article:published_time" content="20250331T120000+0900">
     <meta data-hid="fb:app_id" property="fb:app_id" content="312701428827152">
     <meta data-hid="robots" name="robots" content="max-image-preview:large">
     <meta name="twitter:card"   content="summary_large_image" />
     <meta name="twitter:site" content="@dot_asahi_pub"/>
-    <meta name="twitter:title" content="〈PR〉●【タイトル】｜AERA dot. (アエラドット)" />
-    <meta name="twitter:description" content="●【ページの説明】" />
-    <meta name="twitter:image" content="https://dot.asahi.com/ad/●【プロジェクトIDyymmddnn】/img/●【画像.jpg】" />
+    <meta name="twitter:title" content="〈PR〉新しい価値観を生み出す「アエラボ」スタート幸せをつくる私の選択キャリアウェルビーイングを考える｜AERA DIGITAL（アエラデジタル）" />
+    <meta name="twitter:description" content="現役世代の女性を対象に、新しい価値観を生み出す実験場として、AERA×ラボラトリー「アエラボ」が新たにスタートした。２月19日夜、東京・大手町三井ホールで開催された第1回の「アエラボ」イベントをレポートする。" />
+    <meta name="twitter:image" content="https://dot.asahi.com/ad/25033103/img/ogp.jpg" />
     <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
     <link rel="preconnect" href="//www.googletagmanager.com" crossorigin>
     <link rel="preconnect" href="//dmp.im-apps.net" crossorigin>
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="//code.jquery.com" crossorigin>
     <link rel="preconnect" href="//aeradot.ismcdn.jp" crossorigin>
     <link rel="index" href="https://dot.asahi.com/" >
-    <link rel="canonical" href="https://dot.asahi.com/ad/●【プロジェクトIDyymmddnn】/" />
+    <link rel="canonical" href="https://dot.asahi.com/ad/25033103/" />
     <link rel="shortcut icon" href="/common/images/favicon.ico">
     <link rel="apple-touch-icon" href="/common/images/apple_touch_icon.png" sizes="180x180">
     <script type="text/javascript">(function(d,u){var b=d.getElementsByTagName("script")[0],j=d.createElement("script");j.async=true;j.src=u;b.parentNode.insertBefore(j,b);})(document,"//img.ak.impact-ad.jp/ut/ced324f765faec92_3871.js");</script>
@@ -49,6 +49,9 @@
     <!-- End Google Tag Manager -->
     <!-- 必要に応じ、ページ固有のCSSファイルを追加 -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- 以下は共通パーツのCSSファイル、必ずheadの最後で読み込むこと -->
     <link rel="stylesheet" href="/resources/aeradot/css/pc/ad.css">
@@ -61,7 +64,89 @@
     <div id="importHeader"></div><script>$("#importHeader").load('/list/adparts/header');</script>
     <main class="l-main">
     <!--//////////////////// コンテンツここから ////////////////////-->
+      <div class="ctsWrap">
+        <div class="hdCts">
+          <p class="pr">〈PR〉</p>
+          <img src="./img/hdimg.jpg" alt="「アエラボ」ステージイベント会場の様子">
+          <h1>
+            <img src="./img/h1.png" alt="新しい価値観を生み出す「アエラボ」スタート幸せをつくる私の選択キャリアウェルビーイングを考える">
+          </h1>
+          <div>
+            <p>現役世代の女性を対象に、新しい価値観を生み出す実験場として、AERA×ラボラトリー「アエラボ」が新たにスタートした。２月19日夜、東京・大手町三井ホールで開催された第1回の「アエラボ」イベントをレポートする。</p>
+            <p>文／安楽由紀子　撮影／スケガワケンイチ　デザイン／スープアップデザインズ<br>制作／朝日新聞出版メディアプロデュース部ブランドスタジオ<br>企画／AERA DIGITAL ADセクション</p>
+            <p>◀︎ 約500人が参加した「アエラボ」ステージイベント会場の様子</p>
+          </div>
+          <img src="./img/sub.jpg" alt="「アエラボ」ステージイベント会場の様子" class="sub">
+        </div>
 
+        <article class="mainCts">
+          <p class="txt">「アエラボ2025」第1回は「キャリアウェルビーイング『あなたの選択、私の選択』」がテーマ。キャリアウェルビーイングとは、仕事だけでなく人生全般におけるキャリアを指す。生き方が多様化する現代において、自分らしさを失わない「キャリアウェルビーイング」とはどのようなものか。ゲストとして、デザイナーでありアーティストでもある篠原ともえさんを迎え、AERA編集長・木村恵子、AERA dot. 編集長・鎌田倫子がファシリテーターとなりトークを展開した。</p>
+          <p class="txt">　またホワイエでは、協賛企業8社のうち5社がブースを出展。人気商品やサービスを紹介。軽食ビュッフェやドリンクコーナーもあり、約500人の参加者たちでにぎわった。</p>
+          <p class="txt">　ここでは篠原さんとのトークショーの様子を紹介する。</p>
+
+          <div class="photo1">
+            <div class="photo1-1">
+              <p>篠原ともえさん／1995年に歌手デビュー。文化女子大学（現・文化学園大学）短期大学部服装学科デザイン専攻卒業。2022年にデザイン・ディレクションを手がけた革の着物作品がニューヨークADC賞、東京ADC賞を受賞。朝日新聞デジタルマガジン&wでコラム「アイデアのありか」を連載中</p>
+            </div>
+            <img src="./img/ph-1.jpg" alt="篠原ともえさん" class="photo1-2">
+          </div>
+          <div class="photo2">
+            <img src="./img/ph-2-1.jpg" alt="木村恵子" class="photo2-1">
+            <div class="photo2-2">
+              <div>
+                <p>AERA編集長 木村恵子／1999年、朝日新聞社入社。2004年から「AERA」編集部。22年4月から編集長に</p>
+              </div>
+              <div>
+                <p>AERA dot.編集長 鎌田倫子／地方新聞の記者を経て朝日新聞出版に入社。「AERA dot.」のデスクを務めたのち現職 </p>
+              </div>
+            </div>
+            <img src="./img/ph-2-2.jpg" alt="鎌田倫子" class="photo2-3">
+          </div>
+
+          <h2>
+            <img src="./img/h2.png" alt="もう１人の自分を育てると楽しい">
+          </h2>
+          <p><span>鎌田</span>今回のイベントのテーマは「あなたの選択、私の選択」です。篠原さんが心に残っている大きな選択はなんでしょうか。</p>
+          <p><span>篠原</span>2020年に夫と一緒にデザイン会社を立ち上げたことが大きな決断でした。このときは芸能事務所を離れ1年間休む決断をし、ＳＮＳもフォロワーの方がいたけれど退会し、全部手放す体験をしてみたんです。やってみたことのない大きな決断ですごく怖かったのですが、おもしろい体験でもありました。自分が変わるというよりも、もう1人自分が増えるという感覚、自分の知らないちょっと強い自分が育っていく感覚があって、「決断っておもしろいな」と思ったんですよね。見たことのない景色だったり、なったことのない感情になれたりするので、みなさんも「怖いな、私にはできないな」と思っていることがあっても、自分を信じて飛び込んでみると「あれ？　楽しいな」という感覚になれると思います。</p>
+          <p><span>鎌田</span>何かを選択するときは「失敗するんじゃないか」という恐れや「何かを捨てたり、これまでの自分を否定したりしなければならないのではないか」という思いがありますが、そうではなく「新しい自分がもう1人できた感覚で楽しい」というのは素敵な考え方ですね。</p>
+          <p><span>篠原</span>本当に小さなことから始めてみるといいと思います。例えば服装を変える、新しい趣味を始めてみる、そういう小さなことでも、会ったことのない自分がいるかもしれない。そういう自分と対面してほしい。この経験はおすすめです。</p>
+
+          <div class="photo3">
+            <div>
+              <img src="./img/ph-3-1.jpg" alt="撮影スポット">
+              <img src="./img/ph-3-2.jpg" alt="軽食コーナー">
+              <img src="./img/ph-3-3.jpg" alt="トートバッグ">
+              <img src="./img/ph-3-4.jpg" alt="お菓子">
+            </div>
+            <p>AERAの表紙になれる撮影スポットやバックナンバー販売、スイーツやミニハンバーガーが並ぶ軽食コーナーも。来場者全員にロゴ入りのトートバッグやお菓子が渡された</p>
+          </div>
+
+          <p><span>木村</span>大きな選択から小さな選択まで日々繰り返していると、「あっちを選べばよかった」とネガティブになることもあると思いますが、自分の選択を正解にするためのポイントはありますか。</p>
+          <p><span>篠原</span>必殺技は「ネガティブは忘れる」。ネガティブなことに引っ張られるのは時間がもったいないんですよ。忘れる力を鍛えるしかないと思っています。私からも質問いいですか。ＡＥＲＡを通じて届けたいことをお尋ねしたいです。</p>
+          <p><span>鎌田</span>ＡＥＲＡはニュースを扱うことで個人と世の中を繋ぐ役割を担っていると思っています。「個人の幸せを大切にしよう」というメッセージとともに、「社会のいい歯車になるのもいい」ということも伝えたいですね。</p>
+          <p><span>木村</span>今はＳＮＳも含めて一方向の情報が集まりがちなので、ＡＥＲＡというメディアを通して、いろんな人がいていろんな価値観があって、だからこそこんな出会いもあるということを伝えたいと思っています。一冊に宝箱みたいにいろんなことが詰まっているメディアでありたい。先ほどの篠原さんの表現を借りれば、新しい自分が増えるきっかけになれたらと考えています。篠原さんはご自身の創作を通して届けたいことはなんですか。</p>
+          <p><span>篠原</span>私の祖母は着物のお針子で、祖母の着物を私が引き継いだ時に、このＤＮＡも私が継ぎたいと思いました。自分のルーツの中に答えを見つけて、ものづくりをする人生を歩みたいと30代の時に決断したので、それを届けていきたいと感じます。「キャリアウェルビーイング」は仕事だけでなく、自分の幸せをどうクリエイションしていくかということ。とてもいいテーマですね。皆さんも自分の心と向き合って、どのように人生を歩めば幸せになれるのか、ぜひ考えていただけたらと思っています。</p>
+
+          <div class="photo4">
+            <div>
+              <img src="./img/ph-4-1.jpg" alt="スタンプラリー">
+              <img src="./img/ph-4-2.jpg" alt="会場">
+            </div>
+            <p>協賛企業から、moomoo証券、日本メナード化粧品、ヤクルト本社、国際ビジネスコミュニケーション協会、日本対がん協会がブースを出展。オリジナルノベルティがもらえるスタンプラリーを開催した</p>
+          </div>
+
+          <div class="sponsor">
+            <img src="./img/sponsor.jpg" alt="アエラボ2025 協賛企業">
+            <p>moomoo証券株式会社、日本メナード化粧品株式会社、住信SBIネット銀行株式会社、株式会社ヤクルト本社、株式会社みずほフィナンシャルグループ、株式会社ローソン、一般財団法人国際ビジネスコミュニケーション協会、公益財団法人日本対がん協会</p>
+          </div>
+
+          <div class="info">
+            <h3>問い合わせ</h3>
+            <p>アエラボ事務局</p>
+            <a href="https://publications.asahi.com/" target="_blank">https://publications.asahi.com/</a>
+          </div>
+        </article>
+      </div>
     <!--//////////////////// コンテンツここまで ////////////////////-->
     <div data-read="read-complete"></div>
     <img src="https://aeradot.ismcdn.jp/common/images/blank.gif" width="1" height="1" id="read-complete">
