--- a/pc/index.html
+++ b/pc/index.html
@@ -101,6 +101,7 @@
               </div>
             </div>
             <img src="./img/ph-2-2.jpg" alt="鎌田倫子" class="photo2-3">
+            <p>※肩書は取材当時（2025年2月19日）のものです</p>
           </div>
 
           <h2>
