--- a/sp/index.html
+++ b/sp/index.html
@@ -101,6 +101,7 @@
             <p>AERA dot.編集長 鎌田倫子／地方新聞の記者を経て朝日新聞出版に入社。「AERA dot.」のデスクを務めたのち現職 </p>
             <img src="./img/ph-2-2.jpg" alt="鎌田倫子" class="photo2-3">
           </div>
+          <p>※肩書は取材当時（2025年2月19日）のものです</p>
         </div>
 
         <h2>
